Ajout de fonction

--- a/Climat_data_scrap.ipynb
+++ b/Climat_data_scrap.ipynb
@@ -55,8 +55,7 @@
     "from os.path import isfile, join\n",
     "\n",
     "# bib\n",
-    "from utils.climat_color import climat_color\n",
-    "from toolbox.bib import histogramme_de_completion"
+    "from utils.climat_color import climat_color"
    ]
   },
   {
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ff5e4a6d-1d4d-4f43-82b2-78c0b350d03f",
    "metadata": {},
    "outputs": [],
@@ -97,6 +96,47 @@
     "            response= requests.get(url)\n",
     "            open(\"data/gz/synops\"+ annee_mois +\".gz\", \"wb\").write(response.content)\n",
     "            sleep(0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2d4ff42f-e66a-40d6-be31-d063dc63d7c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def histogramme_de_completion(df, prct=False):\n",
+    "    \"\"\" Affiche l'histogramme de completion du Dataframe ou de la serie passé en paramètre\n",
+    "        - df: Le dataframe\n",
+    "        - prc: Affichage du paragramme\n",
+    "        return null\"\"\"\n",
+    "    \n",
+    "    # cas des series\n",
+    "    if len(df.shape) == 1:\n",
+    "        __histogramme_de_serie(df, prct)\n",
+    "        return\n",
+    "    \n",
+    "    hauteur  = df.shape[1]/2 if len(df.shape) == 2 else 1\n",
+    "    fig = plt.figure(figsize=(8,hauteur))\n",
+    "    not_nulls = df.notnull().sum()\n",
+    "    not_nulls_frq = not_nulls/len(df)*100\n",
+    "    variables = not_nulls_frq.index\n",
+    "    p1 = plt.barh(variables, not_nulls_frq)\n",
+    "    \n",
+    "    cpt = 0\n",
+    "    for rect1 in p1:\n",
+    "        if prct: \n",
+    "            plt.annotate( \"{}%\".format(round(not_nulls_frq[cpt],2)),\n",
+    "                         (rect1.get_x() +50 ,rect1.get_y()),ha=\"center\",\n",
+    "                         va=\"bottom\",fontsize=12)\n",
+    "        else:\n",
+    "            plt.annotate( \"{}\".format(not_nulls[cpt]),\n",
+    "                         (rect1.get_x() +50 ,rect1.get_y()),ha=\"center\",\n",
+    "                         va=\"bottom\",fontsize=12)\n",
+    "        cpt +=1\n",
+    "        \n",
+    "    plt.xlabel('Pourcentage de completion')\n",
+    "    plt.show()"
    ]
   },
   {
